fix: fix infobox width and styling dark mode and fix menu redirection

--- a/css/infobox.css
+++ b/css/infobox.css
@@ -1,19 +1,22 @@
 .info-box {
   display: flex;
-  border: 1.5px solid #f1c40f;
-  background-color: #fff9db;
+  /* border: 1.5px solid #f1c40f; */
+  /* background-color: #fff9db; */
+  border: 1px solid var(--infobox-border-color);
+  background-color: var(--infobox-bg);
+
   border-radius: 10px;
   padding: 0 10px;
-  max-width: 500px;
   color: #333;
-  font-family: sans-serif;
+  /* font-family: sans; */
   gap: 10px;
   margin-bottom: 10px;
 }
 
 .info-box .icon {
   font-size: 20px;
-  color: #f1c40f;
+  /* color: #f1c40f; */
+  color: var(--infobox-icon-color);
   align-content: center;
 }
 
@@ -24,8 +27,10 @@
 
 .info-box .content p {
   margin: 10px 0;
+  color: var(--text-color);
 }
 
 .warning .icon {
-  color: #f1c40f;
+  /* color: #f1c40f; */
+  color: var(--infobox-icon-color);
 }
