--- a/css/ui.css
+++ b/css/ui.css
@@ -171,6 +171,11 @@ body {
   flex-direction: column;
 }
 
+h1 {
+  font-size: 20px;
+  color: var(--text-color);
+}
+
 h2,
 h3 {
   /* font-size: 12px; */
@@ -400,6 +405,10 @@ p {
 
   .banner-container {
     margin-top: 40px;
+  }
+
+  h1 {
+    font-size: 18px;
   }
 }
 
